# clients-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  HOW_IT_WORKS.md  LICENSE.txt  README.md  justfile
.github/workflows/: ci.yml  publish.yml
clients-macros/: Cargo.toml
clients-macros/src/: lib.rs
dep-macros/: Cargo.toml
dep-macros/src/: lib.rs
examples/: layered_app.rs  rick_and_morty_cli.rs
src/: builtins.rs  lib.rs
tests/: builtins.rs  integration.rs
