[workspace]
members = ["clients-macros"]
default-members = [".", "clients-macros"]
resolver = "3"

[features]
default = []
reqwest = ["dep:reqwest"]
uuid = ["dep:uuid"]

[package]
name = "clients"
version = "0.1.0"
edition = "2024"
description = "Concrete-struct dependency injection for Rust using function pointers instead of trait objects"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/clients"
repository = "https://github.com/Sajjon/clients-rs"

[dependencies]
clients-macros = { path = "clients-macros", version = "0.1.0" }
rand = "0.8"
reqwest = { version = "0.12", optional = true, default-features = false, features = ["blocking", "rustls-tls"] }
uuid = { version = "1", optional = true, features = ["v4"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[[example]]
name = "rick_and_morty_cli"
required-features = ["reqwest"]
